2, added books ratings
