# src/db/models/Book.js
@@ -1,12 +1,18 @@
 const { Model, DataTypes } = require('sequelize');
 const Author = require('./Author');
 const Genre = require('./Genre');
+const Rating = require('./Rating');
 const sequelize = require('../sequelize');
 
 class Book extends Model {}
 
 Book.init({
-  name: DataTypes.STRING,
+  name: {
+    type: DataTypes.STRING,
+    allowNull: false,
+    len: [2, 100],
+    trim: true,
+  },
 }, { sequelize, modelName: 'Book' });
 
 Book.belongsToMany(Author, {
@@ -16,6 +22,10 @@ Book.belongsToMany(Author, {
 
 Book.belongsToMany(Genre, {
   through: 'BookToGenre',
+  foreignKey: 'bookId',
+});
+
+Book.hasMany(Rating, {
   foreignKey: 'bookId',
 });
 
