# src/db/models/Rating.js
@@ -4,7 +4,18 @@ const sequelize = require('../sequelize');
 class Rating extends Model {}
 
 Rating.init({
-  value: DataTypes.NUMBER,
+  rate: {
+    type: DataTypes.NUMBER,
+    allowNull: false,
+  },
+  bookId: {
+    type: DataTypes.INTEGER,
+    allowNull: false,
+    references: {
+      model: 'Book',
+      key: 'id',
+    },
+  },
 }, { sequelize, modelName: 'Rating' });
 
 module.exports = Rating;
